plugins {
    id 'java'
}

group = 'com.mineplus'
version = '1.3.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
}

dependencies {
    compileOnly files(
            "libs/paper-api-1.21.jar",
            "libs/spigot-api-1.21.1.jar",
            "libs/adventure-api-4.17.0.jar",
            "libs/adventure-text-minimessage-4.17.0.jar",
            "libs/adventure-key-4.17.0.jar",
            "libs/adventure-platform-api-4.3.0.jar",
            "libs/bungeecord-chat-1.20.jar",
            "libs/joml-1.10.8.jar",
            "libs/gson-2.13.2.jar",
            "libs/item-nbt-api-plugin-2.15.6.jar",
            "libs/sqlite-jdbc-3.45.1.0.jar",
            "libs/HikariCP-5.1.0.jar",
            "libs/fastutil-8.5.14.jar"
    )
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

processResources {
    inputs.property("version", project.version)
    filteringCharset = 'UTF-8'

    filesMatching("plugin.yml") {
        expand(version: project.version)
    }
}
